rename column data in documents table